--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
 <body>
 	<h1 class="title">Hi I'm Skyy :)</h1>
+	<iframe width="110" height="200" src="https://www.myinstants.com/instant/fart-button/embed/" frameborder="0" scrolling="no"></iframe>
 </body>
 </html>
