--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 	<h1 class="title">Hi I'm Skyy :)</h1>
 	<iframe width="110" height="200" src="https://www.myinstants.com/instant/fart-button/embed/" frameborder="0" scrolling="no"></iframe>
-	<img src="img/monke.png" alt="">
+	<img src="img/monke.png" alt="" class="monk">
 </body>
 </html>
