--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 
 <body>
+	<div class="monk-container">
+	<img src="img/monke.png" alt="" class="monk">
+	</div>
 	<h1 class="title">Hi I'm Skyy :)</h1>
 	<iframe width="110" height="200" src="https://www.myinstants.com/instant/fart-button/embed/" frameborder="0" scrolling="no"></iframe>
-	<img src="img/monke.png" alt="" class="monk">
+	
 </body>
 </html>
