--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	</div>
 	<h1 class="title">Hi I'm Skyy :)</h1>
 	<iframe width="110" height="200" src="https://www.myinstants.com/instant/fart-button/embed/" frameborder="0" scrolling="no"></iframe>
+	<h1 class="body">This is my website! :)</h1>
 	
 </body>
 </html>
