--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div class="monk-container">
-	<img src="img/monke.png" alt="" class="monk">
+	<img src="img/baby monk.jpg" alt="" class="monk">
 	</div>
 	<h1 class="title">Hi I'm Bumble :)</h1>
 	<iframe width="110" height="200" src="https://www.myinstants.com/instant/fart-button/embed/" frameborder="0" scrolling="no"></iframe>
